--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
 <p>Inspired from Chanel (Obviously). My younger cousin requested this one.</p>
 </fieldset>
 
+<fieldset>
+<figure>
+  <figcaption>Koko Chanel</figcaption>
+  <img alt="Koko Chanel" src="kokopotter.png">
+</figure>
+<p>You're a wizard koko.</p>
+</fieldset>
+  
 <h3>More Coming Soon!</h3>
 <style>
 img {
