--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <fieldset>
 <figure>
   <figcaption>Koko Chanel</figcaption>
-  <img alt="Koko Chanel" src="kokopotter.png">
+  <img alt="Koko Potter" src="kokopotter.png">
 </figure>
 <p>You're a wizard koko.</p>
 </fieldset>
