--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <figcaption>Legendary Koko</figcaption>
   <img alt="Legendary Koko" src="legendarykoko.png">
 </figure>
-<p>The Almightly Legendary Koko!</p>
+<p>The Almighty Legendary Koko!</p>
 </fieldset>
 
 <fieldset>
@@ -162,10 +162,10 @@
 
 <fieldset>
 <figure>
-  <figcaption>Koko Chanel</figcaption>
+  <figcaption>Koko Potter</figcaption>
   <img alt="Koko Potter" src="kokopotter.png">
 </figure>
-<p>You're a wizard koko.</p>
+<p>Yer a wizard koko.</p>
 </fieldset>
   
 <h3>More Coming Soon!</h3>
