--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
 </figure>
 <p>Yer a wizard koko.</p>
 </fieldset>
+  https://kappakokonut.netlify.app/
+
+<fieldset>
+<figure>
+  <figcaption>Sus koko</figcaption>
+  <img alt="Sus Koko" src="suskoko.png">
+</figure>
+<p>When da Koko is sus.</p>
+</fieldset>
   
 <h3>More Coming Soon!</h3>
 <style>
