--- a/index.html
+++ b/index.html
@@ -2,28 +2,9 @@
 <link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
 <h1 style="font-family: ZCOOL KuaiLe; color: white">Kappakokonuts - NFT</h1>
 
-
+  <h1>Want some kokonuts? Click Here To Buy Them!&#8595</h1>
 <fieldset>
-<div id="mintable-widget"></div>
-</fieldset>
-<script>
-  (function (w, d, s, o, f, js, fjs) {
-    w["Mintable_Widget"] = o;
-    w[o] = w[o] ||
-      function () {
-        (w[o].q = w[o].q || []).push(arguments);
-      };
-    (js = d.createElement(s)), (fjs = d.getElementsByTagName(s)[0]);
-    js.id = o;
-    js.src = f;
-    js.async = 1;
-    fjs.parentNode.insertBefore(js, fjs);
-  })(window, document, "script", "widget", "https://unpkg.com/mintable-widget/dist/index.js");
-  widget("init", { targetElementId: "mintable-widget" });
-  widget("shownft", {
-    size:"full",ids:["collectibles/listing/pa26cJ4IvGbVR4Z"],fontFamily:"Arial",backgroundColor:"#ffffff",fontColor:"#000000",subtitleColor:"#000000",buttonColor:"#0032ff",buttonTextColor:"#000000",boxShadow:true
-  });
-</script>
+<iframe src="https://opensea.io/collection/kappakokonuts" height="200" width="300" title="Kappakokonuts Page"></iframe>
 <fieldset>
 <figure>
   <figcaption>Red Koko</figcaption>
