--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
   <h1>Want some kokonuts? Click Here To Buy Them!&#8595</h1>
 <fieldset>
-<iframe src="https://opensea.io/collection/kappakokonuts" height="200" width="300" title="Kappakokonuts Page"></iframe>
-<fieldset>
+<iframe src="https://opensea.io/collection/kappakokonuts" height="500" width="100%" title="Kappakokonuts Page"></iframe>
+</fieldset>
 <figure>
   <figcaption>Red Koko</figcaption>
   <img alt="Red Koko" src="redkoko.png">
