--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <h1>Want some kokonuts? Click Here To Buy Them!&#8595</h1>
 <fieldset>
-<iframe src="https://opensea.io/collection/kappakokonuts" height="500" width="100%" title="Kappakokonuts Page"></iframe>
+<iframe src="https://opensea.io/collection/kappakokonuts" style="height: 500; width: 100%" title="Kappakokonuts Page"></iframe>
 </fieldset>
 <figure>
   <figcaption>Red Koko</figcaption>
