--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <fieldset>
 <iframe src="https://opensea.io/collection/kappakokonuts" style="height: 500; width: 100%" title="Kappakokonuts Page"></iframe>
 </fieldset>
+
+  <h1>Meet the kokonuts:</h1>
+<fieldset>
 <figure>
   <figcaption>Red Koko</figcaption>
   <img alt="Red Koko" src="redkoko.png">
